# sstcam-build

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  setup.py
root_template/: CMakeLists.txt  setup.py
root_template/cmake/: python_setup.cmake
root_template/python/: __init__.py
scbuild/: sstcambuild.py
scbuild/conda_build/: enviroment.yml
scbuild/conda_build/cppzmq/: build.sh  meta.yaml
scbuild/conda_build/zeromq/: build.sh  meta.yaml
scbuild/root_template/: CMakeLists.txt  setup.py
scbuild/root_template/cmake/: python_setup.cmake  sstcam_library.cmake  sstcam_test.cmake
scbuild/root_template/python/: __init__.py
